--- a/AutoTPs.csproj
+++ b/AutoTPs.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.15" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="77.0.3865.4000" />
     <PackageReference Include="WebDriverChromeDriver" Version="2.10.0" />
